sahi-core/src/test/resources/scripts/demo/shouldfail/continue_on_error.sah
_continueOnError()
_click(_link("Non existent 1"));
_click(_link("Link Test"));
_click(_link("Non existent 2"));
_click(_link("Back"));
_stopOnError();
_click(_link("Non existent 3")); // should fail here
